--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "axios": "^0.15.3",
     "bootstrap-sass": "^3.3.7",
     "cross-env": "^3.2.3",
-    "jquery": "^3.1.1",
+    "jquery": "^3.3.1",
     "laravel-mix": "0.*",
     "lodash": "^4.17.4",
     "vue": "^2.1.10"
@@ -27,23 +27,30 @@
     "bootstrap-switch": "^3.3.4",
     "bootstrap-toggle": "^2.2.2",
     "brace": "^0.10.0",
+    "clipboard": "^2.0.1",
     "cropperjs": "^1.0.0",
     "datatables-bootstrap3-plugin": "^0.5.0",
     "datatables.net": "^1.10.15",
     "datetimepicker": "^0.1.38",
     "dropzone": "^5.0.1",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "highlight": "^0.2.4",
     "icheck": "^1.0.2",
     "jquery-match-height": "^0.7.2",
     "jquery-sortable": "^0.9.13",
     "jquery-ui": "^1.12.1",
+    "node-waves": "^0.7.6",
     "perfect-scrollbar": "^0.7.1",
+    "popper.js": "^1.14.3",
     "readmore-js": "^2.1.0",
     "select2": "^4.0.3",
     "simplemde": "^1.11.2",
     "slugify": "^1.1.0",
     "tinymce": "^4.6.3",
     "toastr": "^2.1.2",
-    "vue": "^2.3.4"
+    "vue": "^2.3.4",
+    "waves": "^0.1.1",
+    "waves.js": "0.0.7-13"
   }
 }
