--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "toastr": "^2.1.2",
     "vue": "^2.3.4",
     "waves": "^0.1.1",
-    "waves.js": "0.0.7-13"
+    "waves.js": "0.0.7-13",
+    "wowjs": "^1.1.3"
   }
 }
