--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,8 +1,5 @@
 {
   "/publishable/assets/js/app.js": "/publishable/assets/js/app.js",
   "/mix.js": "/mix.js",
-  "/publishable/assets/css/app.css": "/publishable/assets/css/app.css",
-  "/ublishable/assets/js/app.js": "/ublishable/assets/js/app.js",
-  "/ix.js": "/ix.js",
-  "/blishable/assets/css/app.css": "/blishable/assets/css/app.css"
+  "/./publishable/assets/css/app.css": "/./publishable/assets/css/app.css"
 }
