--- a/package.json
+++ b/package.json
@@ -11,32 +11,35 @@
   },
   "devDependencies": {
     "axios": "^0.15.3",
-    "bootstrap-sass": "^3.3.7",
     "cross-env": "^3.2.3",
-    "jquery": "^3.1.1",
+    "jquery": "^3.3.1",
     "laravel-mix": "0.*",
     "lodash": "^4.17.4",
     "vue": "^2.1.10"
   },
   "dependencies": {
     "ace-builds": "^1.2.6",
-    "animate.css": "^3.5.2",
-    "bootstrap": "^3.3.7",
+    "animate.css": "^3.6.1",
+    "bootstrap": "^4.1.1",
     "bootstrap-datepicker": "^1.6.4",
     "bootstrap-datetimepicker": "0.0.7",
     "bootstrap-switch": "^3.3.4",
     "bootstrap-toggle": "^2.2.2",
     "brace": "^0.10.0",
     "cropperjs": "^1.0.0",
+    "datatables": "^1.10.17",
     "datatables-bootstrap3-plugin": "^0.5.0",
     "datatables.net": "^1.10.15",
+    "datatables.net-bs4": "^1.10.16",
     "datetimepicker": "^0.1.38",
     "dropzone": "^5.0.1",
+    "hammerjs": "^2.0.8",
     "highlight": "^0.2.4",
     "icheck": "^1.0.2",
     "jquery-match-height": "^0.7.2",
     "jquery-sortable": "^0.9.13",
     "jquery-ui": "^1.12.1",
+    "node-waves": "^0.7.6",
     "perfect-scrollbar": "^0.7.1",
     "popper.js": "^1.14.3",
     "readmore-js": "^2.1.0",
