--- a/composer.json
+++ b/composer.json
@@ -3,15 +3,15 @@
     "description": "A Laravel Admin Package for The Control Group to make your life easier and steer your project in the right direction",
     "keywords": ["laravel", "admin", "panel"],
     "license": "MIT",
-    "homepage": "https://the-control-group.github.io/voyager/",
+    "homepage": "https://github.com/SouravDas25/voyager",
     "support": {
-        "issues": "https://github.com/the-control-group/voyager/issues",
-        "source": "https://github.com/the-control-group/voyager"
+        "issues": "https://github.com/SouravDas25/voyager/issues",
+        "source": "https://github.com/SouravDas25/voyager"
     },
     "authors": [
         {
-            "name": "Tony Lea",
-            "email": "tony.lea@thecontrolgroup.com"
+            "name": "Sourav Das",
+            "email": "souravbumbadas25@gmail.com"
         }
     ],
     "require": {
