Fixed Style Errors

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.1.1",
     "bootstrap-datepicker": "^1.6.4",
     "bootstrap-datetimepicker": "0.0.7",
+    "bootstrap-material-datetimepicker": "^2.7.3",
     "bootstrap-switch": "^3.3.4",
     "bootstrap-toggle": "^2.2.2",
     "brace": "^0.10.0",
@@ -39,6 +40,7 @@
     "jquery-match-height": "^0.7.2",
     "jquery-sortable": "^0.9.13",
     "jquery-ui": "^1.12.1",
+    "moment": "^2.22.2",
     "node-waves": "^0.7.6",
     "perfect-scrollbar": "^0.7.1",
     "popper.js": "^1.14.3",
